with respect to issue #121 4th, 3rd issue, #124 3rd,4th issue , #119 , #113 wrap issue

--- a/src/app/components/search/search-analytics/search-history-container/search-history-container.component.css
+++ b/src/app/components/search/search-analytics/search-history-container/search-history-container.component.css
@@ -73,7 +73,7 @@ span #history-doctors-footer:hover{
   background: white;
   display: inline-block;
    padding: 1%; */
-   width: 3em;
+   width: auto;
    height: 2em;
    margin: 2em;
    border-radius: 10px;
